# earthquake-data-etl

./: .coveragerc  .flake8  .gitignore  README.md  pyproject.toml  requirements.txt
config/: db_config.py  env_config.py
data/processed/: 2025-08-18 20:04:41.951567_transformed_earthquake_data.json  2025-08-19 10:32:59.906451_transformed_earthquake_data.json  2025-08-19 16:19:08.416693_transformed_earthquake_data.json
data/test/: test_2025-08-19 10:40:20.057548_transformed_earthquake_data.json  test_earthquake_data_last_30_days.geojson  unclean_earthquake_test_data.geojson
notebooks/: EDA.ipynb
scripts/: run_etl.py
src/extract/: extract.py  poll_tracker.json
src/load/: load.py
src/sql/: alter_table.sql
src/transform/: transform.py
src/utils/: extract_utils.py  load_utils.py  logging_utils.py  transform_utils.py
tests/: conftest.py  run_tests.py
tests/unit_tests/: test_db_config.py  test_env_config.py  test_extract.py  test_extract_utils.py  test_load.py  test_load_utils.py  test_logging_utils.py  test_transform.py  test_transform_utils.py
